refactor: List 반환 메서드 제거 및 Page 메서드로 통합
- Repository List 반환 메서드 제거, Page 메서드만 유지
- findByCustomerId, findByStatus 등 List 메서드 제거
- 모든 조회 메서드를 페이징 처리로 통합
- 테스트 코드를 Page 메서드 사용하도록 수정
- PageRequest, PageImpl 사용
- 17개 테스트 모두 통과